# softfab

./: .coveragerc  .gitignore  LICENSE  README.md  dev.sh  mypy.ini  pylint.sh  pylintrc  pyproject.toml  run.sh  tasks.py
docs/: convert.py  sfdocs.lektorproject
docs/assets/static/: style.css
docs/content/: contents.lr
docs/content/installation/: contents.lr
docs/content/installation/downloads/: contents.lr
docs/content/installation/factory_pc_installation/: contents.lr
docs/content/installation/release_notes/: contents.lr
docs/content/installation/wrappers/: contents.lr
docs/content/installation/wrappers/shared-wrappers/: contents.lr
docs/content/installation/wrappers/writing-a-wrapper/: contents.lr
docs/content/installation/wrappers/writing_a_wrapper/: contents.lr
docs/content/introduction/: contents.lr
docs/content/introduction/execution-graph/: contents.lr
docs/content/introduction/faq/: contents.lr
docs/content/introduction/framework-and-task-definitions/: contents.lr
docs/content/introduction/framework_and_task_definitions/: contents.lr
docs/content/introduction/mid-level-data/: contents.lr
docs/content/introduction/mid_level_data/: contents.lr
docs/content/introduction/roadmap/: contents.lr
docs/content/introduction/semi-automatic-testing/: contents.lr
docs/content/introduction/semi_automatic_testing/: contents.lr
docs/content/reference/: contents.lr
docs/content/reference/api/: contents.lr
docs/content/reference/cm_triggered_build_and_test/: contents.lr
docs/content/reference/user-manual/: contents.lr
docs/content/reference/user_manual/: contents.lr
docs/models/: page.ini  toc.ini
docs/templates/: layout.html  toc.html
docs/templates/macros/: toc-tools.html
src/softfab/: Abort.py  AbortTask.py  About.py  AddUser.py  BatchExecute.py  CSVPage.py  Capabilities.py  ChangePassword.py  ConfigDetails.py  ConfigTags.py  Configure.py  ControlPage.py  DelFinishedSchedules.py  DelJobConfig.py  DelSchedule.py  DelTaskRunnerRecord.py  Design.py  EditPage.py  Execute.py  ExecutionGraphExamples.py  ExtractedData.py  ExtractionDetails.py  FabPage.py  FastExecute.py  Feed.py  FrameworkDelete.py  FrameworkDetails.py  FrameworkEdit.py  FrameworkIndex.py  Garbage.py  GetFactoryInfo.py  GetJobHistory.py  GetJobInfo.py  GetResourceInfo.py  GetTagged.py  GetTaggedTaskInfo.py  GetTaskDefParams.py  Home.py  InspectDone.py  InternalErrorPage.py  (+152 more)
src/softfab/docs/: __init__.py  contents.md
src/softfab/docs/concepts/: __init__.py  contents.md
src/softfab/docs/concepts/exegraph/: __init__.py  contents.md
src/softfab/docs/concepts/midlevel/: __init__.py  contents.md
src/softfab/docs/concepts/resources/: __init__.py  contents.md
src/softfab/docs/concepts/semiauto/: __init__.py  contents.md
src/softfab/docs/concepts/taskdefs/: __init__.py  contents.md
src/softfab/docs/howto/: __init__.py  contents.md
src/softfab/docs/howto/ci/: __init__.py  contents.md
src/softfab/docs/installation/: __init__.py  contents.md
src/softfab/docs/installation/downloads/: __init__.py  contents.md
src/softfab/docs/installation/factory_pc_installation/: __init__.py  contents.md
src/softfab/docs/installation/release_notes/: __init__.py  contents.md
src/softfab/docs/installation/wrappers/: __init__.py  contents.md
src/softfab/docs/introduction/: __init__.py  contents.md
src/softfab/docs/introduction/execution_graph/: contents.md
src/softfab/docs/introduction/faq/: __init__.py  contents.md
src/softfab/docs/introduction/framework_and_task_definitions/: __init__.py  contents.md
src/softfab/docs/introduction/mid_level_data/: __init__.py  contents.md
src/softfab/docs/introduction/roadmap/: __init__.py  contents.md
src/softfab/docs/introduction/semi_automatic_testing/: __init__.py  contents.md
src/softfab/docs/reference/: __init__.py  contents.md
src/softfab/docs/start/: __init__.py  contents.md
src/softfab/pages/: Abort.py  AbortTask.py  About.py  AddUser.py  AnonGuest.py  BatchExecute.py  Capabilities.py  ChangePassword.py  ConfigDetails.py  ConfigTags.py  Configure.py  DelFinishedSchedules.py  DelJobConfig.py  DelSchedule.py  DelTaskRunnerRecord.py  Design.py  Execute.py  ExecutionGraphExamples.py  ExtractedData.py  ExtractionDetails.py  FastExecute.py  Feed.py  FrameworkDelete.py  FrameworkDetails.py  FrameworkEdit.py  FrameworkIndex.py  Garbage.py  GetFactoryInfo.py  GetJobHistory.py  GetJobInfo.py  GetResourceInfo.py  GetTagged.py  GetTaggedTaskInfo.py  GetTaskDefParams.py  Home.py  InspectDone.py  LatestReport.py  ListModels.py  LoadExecute.py  LoadExecuteDefault.py  (+51 more)
src/softfab/static/: .gitignore  __init__.py
src/softfab/styles/: __init__.py  control-center.css  msoffice.css  report_navigation.css  sw-factory.css
src/softfab/webhooks/: __init__.py  github.py  gogs.py
tests/pylint/: cached_property.py  sf_checker.py  typing_dict.py  zope_interface.py
tests/tools/: run_console_script.py
tests/unit/: conftest.py  datageneratorlib.py  initconfig.py  shadowtestutils.py  test_commandline.py  test_databaselib.py  test_dispatchlib.py  test_joblib.py  test_json.py  test_reportlib.py  test_resource_requirements.py  test_resourcelib.py  test_response.py  test_resultlib.py  test_schedulelib.py  test_shadowlib.py  test_sortedqueue.py  test_storagelib.py  test_taskrunnerlib.py  test_timelib.py  test_tokens.py  test_utils_CachedProperty.py  test_utils_SharedInstance.py  test_utils_atomicWrite.py  test_utils_heap.py  test_webhooks.py  test_xmlgen.py
tools/cc_mgr/: cckill.sh  ccstart.sh
tools/ccmgr/: cckill.sh  ccrestart.sh  ccstart.sh
tools/python-stubs/: importlib_metadata.pyi  importlib_resources.pyi
tr/: .gitignore  build.xml
(+79 files in other folders)
