[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'

[tool.isort]
case_sensitive = true
combine_as_imports = true
from_first = true
multi_line_output = 6
known_third_party = 'twisted'

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore Twisted issue: https://twistedmatrix.com/trac/ticket/8227
    "ignore:Using readBody with a transport that does not have an abortConnection method:DeprecationWarning",
    # If a command ends without making an API call, execute() is not awaited.
    "ignore:coroutine 'execute' was never awaited:RuntimeWarning",
    ]

[tool.poetry]
name = 'softfab'
version = "3.0.0-pre1"
description = 'Web application for orchestrating build and test execution'
authors = [
    'Maarten ter Huurne <maarten@boxingbeetle.com>',
    'Hans Spanjers <hans@boxingbeetle.com>',
    ]
license = 'BSD-3-Clause'
readme = 'README.md'
homepage = 'https://boxingbeetle.com/tools/softfab/'
repository = 'https://github.com/boxingbeetle/softfab'
documentation = 'https://docs.softfab.io/'
keywords = ['build', 'test', 'execution', 'process', 'report']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Topic :: Software Development :: Build Tools',
    'Topic :: Software Development :: Quality Assurance',
    'Topic :: Software Development :: Testing',
    ]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/boxingbeetle/softfab/issues"

[tool.poetry.scripts]
softfab = 'softfab.cmdline:main'

[tool.poetry.dependencies]
python = '^3.6'
Twisted = {version = '>=16.6'}
passlib = {version = '^1.7', extras = ['bcrypt']}
graphviz = ">=0.13.2"
pytz = '*'
importlib_metadata = {version = "^1.6", python = "<3.8"}
importlib_resources = {version = "^1.0", python = "<3.7"}
"zope.interface" = '^4.4.2'
markdown = "^3.1"
pygments = "^2.2"
attrs = ">=18.2"
click = "^7.0"
packaging = ">=20.0"

[tool.poetry.dev-dependencies]
pytest = '^6.0'
pylint = '^2.0'
isort = {version = "^4.3", extras = ["pyproject"]}
invoke = '^1.2'
mypy = '>=0.750'
mypy-zope = '^0.2.1'
typing_extensions = '^3.7'
lxml = "^4.3"
pyflakes = "^2.1"
coverage = "^5.2"
pylint-json2html = "^0.1.0"
apetest = "^0.1.1"
pytest-cov = "^2.8.1"
pytest-randomly = "^3.4.1"
